@@ -386,7 +386,6 @@ pc_schema_from_xml(const char *xml_str, PCSCHEMA **schema)
 	xml_doc = xmlReadMemory(xml_ptr, xml_size, NULL, NULL, 0);
 	if ( ! xml_doc )
 	{
-		xmlCleanupParser();
 		pcwarn("unable to parse schema XML");
 		return PC_FAILURE;
 	}
@@ -401,7 +400,6 @@ pc_schema_from_xml(const char *xml_str, PCSCHEMA **schema)
 	if( ! xpath_ctx )
 	{
 		xmlFreeDoc(xml_doc);
-		xmlCleanupParser();
 		pcwarn("unable to create new XPath context to read schema XML");
 		return PC_FAILURE;
 	}
@@ -416,7 +414,6 @@ pc_schema_from_xml(const char *xml_str, PCSCHEMA **schema)
 	{
 		xmlXPathFreeContext(xpath_ctx);
 		xmlFreeDoc(xml_doc);
-		xmlCleanupParser();
 		pcwarn("unable to evaluate xpath expression \"%s\" against schema XML", xpath_str);
 		return PC_FAILURE;
 	}
@@ -496,7 +493,6 @@ pc_schema_from_xml(const char *xml_str, PCSCHEMA **schema)
 						xmlXPathFreeObject(xpath_obj);
 						xmlXPathFreeContext(xpath_ctx);
 						xmlFreeDoc(xml_doc);
-						xmlCleanupParser();
 						pc_schema_free(s);
 						pcwarn("schema dimension at position \"%d\" is declared twice", d->position + 1, ndims);
 						return PC_FAILURE;
@@ -516,7 +512,6 @@ pc_schema_from_xml(const char *xml_str, PCSCHEMA **schema)
 					xmlXPathFreeObject(xpath_obj);
 					xmlXPathFreeContext(xpath_ctx);
 					xmlFreeDoc(xml_doc);
-					xmlCleanupParser();
 					pc_schema_free(s);
 					pcwarn("schema dimension states position \"%d\", but number of XML dimensions is \"%d\"", d->position + 1, ndims);
 					return PC_FAILURE;
@@ -538,7 +533,6 @@ pc_schema_from_xml(const char *xml_str, PCSCHEMA **schema)
 	{
 		xmlXPathFreeContext(xpath_ctx);
 		xmlFreeDoc(xml_doc);
-		xmlCleanupParser();
 		pcwarn("unable to evaluate xpath expression \"%s\" against schema XML", xpath_metadata_str);
 		return PC_FAILURE;
 	}
@@ -578,7 +572,6 @@ pc_schema_from_xml(const char *xml_str, PCSCHEMA **schema)
 
 	xmlXPathFreeContext(xpath_ctx);
 	xmlFreeDoc(xml_doc);
-	xmlCleanupParser();
 
 	return PC_SUCCESS;
 }
